// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mermaid-points Renders \`mermaid-points\` with custom props  1`] = `
<div
  class="mermaid-points mermaid-points--addable"
>
  <mermaid-point-marker-stub
    class="mermaid-points__point"
    entity=""
    size="16"
    x="100"
    y="100"
  />
  <mermaid-point-marker-stub
    class="mermaid-points__point"
    entity=""
    size="16"
    x="150"
    y="150"
  />
  <div
    class="v-menu"
  >
    <transition-stub
      name="v-menu-transition"
    />
  </div>
  <div
    class="v-menu"
  >
    <transition-stub
      name="v-menu-transition"
    />
  </div>
</div>
`;

exports[`mermaid-points Renders \`mermaid-points\` with required props 1`] = `
<div
  class="mermaid-points"
>
  <div
    class="v-menu"
  >
    <transition-stub
      name="v-menu-transition"
    />
  </div>
  <div
    class="v-menu"
  >
    <transition-stub
      name="v-menu-transition"
    />
  </div>
</div>
`;
